force-app/main/default/objects/Bus_Routes__c.object
<CustomObject>
    <fields>
        <fullName>Assembley_Point__c</fullName>
        <label>Assembly Point</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Not Specified</fullName>
                    <default>true</default>
                    <label>Not Specified</label>
                </value>
                <value>
                    <fullName>Gym, Upper Hill</fullName>
                </value>
                <value>
                    <fullName>Canteen, Lower Hill</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Bus_Model__c</fullName>
        <label>Bus Model</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bus_Monitor__c</fullName>
        <label>Bus Monitor</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Bus_Registration_Number__c</fullName>
        <label>Bus Registration Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Campus__c</fullName>
        <label>Campus</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                    <default>true</default>
                    <label>All</label>
                </value>
                <value>
                    <fullName>A</fullName>
                </value>
                <value>
                    <fullName>B</fullName>
                </value>
                <value>
                    <fullName>C</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Driver__c</fullName>
        <label>Driver</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>External_ID_18_Char__c</fullName>
        <description>The ID of the record in the alternate SFDC org, where applicable.</description>
        <externalId>true</externalId>
        <label>External ID (18 Char)</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <length>35</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>School__c</fullName>
        <formula>TEXT(Owner:User.School__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>School</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seat_Capacity__c</fullName>
        <label>Seat Capacity</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Yearly_Cost__c</fullName>
        <label>Total Yearly Cost</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Yearly_Bus_Fee__c</fullName>
        <label>Student Yearly Bus Fee</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>Bus Route</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Campus__c</columns>
        <columns>Bus_Monitor__c</columns>
        <columns>Phone__c</columns>
        <columns>Seat_Capacity__c</columns>
        <columns>OWNER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Number</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Bus Routes</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>TerritoryManual__c</fullName>
        <label>TerritoryManual</label>
    </sharingReasons>
</CustomObject>